--- a/index.html
+++ b/index.html
@@ -114,6 +114,17 @@
 						<div class="slider slider-8"></div>
 						<div class="slider slider-9"></div>
 					</div>
+					<div class="auto-slider2">
+						<div class="slider slider-1"></div>
+						<div class="slider slider-2"></div>
+						<div class="slider slider-3"></div>
+						<div class="slider slider-4"></div>
+						<div class="slider slider-5"></div>
+						<div class="slider slider-6"></div>
+						<div class="slider slider-7"></div>
+						<div class="slider slider-8"></div>
+						<div class="slider slider-9"></div>
+					</div>
 					<!-- <div class="nex-btn"></div>
 					<div class="prev-btn"></div> -->
 				</div>
